--- a/toku-swing/sonar-project.properties
+++ b/toku-swing/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=nezzari:projects
-sonar.projectName=Toku
+sonar.projectName=Toku swing
 sonar.projectVersion=1.0
-sonar.projectDescription=Discussion application
+sonar.projectDescription=Swing presentation of the application
 
 # chemin vers les repertoires contenant les sources et les tests
 sonar.sources=src/main
